# Zero-Shot-Learning-Implementation

./: .gitignore  01_zero_shot_tfidf_label_semantics.ipynb  README.md  SECURITY.md  pyproject.toml  zero_shot_baseline.py  zero_shot_classifier.ipynb
.github/workflows/: ci.yml  codeql.yml
docs/executed/: 01_zero_shot_tfidf_label_semantics.html
tests/: test_zero_shot.py  test_zero_shot_baseline.py
