[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-shot-learning-implementation"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "ruff>=0.5"]

[tool.pytest.ini_options]
pythonpath = ["."]
